update-manager (1:0.133.8ubuntu1) lucid; urgency=low

  * Bump up the amount of /boot space calculated per kernel.  The current
    value appears to undercount by about 260K/kernel. (LP: #132311)
  
  [ Michael Vogt ]
  * refresh translations from launchpad
  * update "10.04" strings to "10.04 LTS" and unfuzzy translations

 -- Barry Warsaw <barry@canonical.com>  Fri, 02 Apr 2010 12:45:11 -0400

update-manager (1:0.133.8) UNRELEASED; urgency=low

  * DistUpgrade/DistUpgradeController.py, DistUpgrade/DistUpgradeCache.py:
    - do not warn about demoted packages that get removed later anyway
  * DistUpgrade/DistUpgrade.cfg, DistUpgrade/DistUpgrade.cfg.hardy:
    - remove deskbar-applet, and nautilus-cd-burner on ubuntu-desktop
      upgrade   (as discussed with the desktop team)
    - remove notification-daemon in favor of notify-osd in 
      xubuntu-desktop (LP: #546857)
  * DistUpgrade/DistUpgrade.cfg.hardy:
    - remove tracker on hardy ubuntu-desktop upgrade
  * help upgrade by hinting usplash gets removed in favor of 
    plymouth
  * UpdateManager/GtkProgress.py:
    - remove window title on cache progress (LP: #549936)
  * check-new-release-gtk:
    - if no ReleaseNotesHtml key is found, do nothing (it means the
      meta-release file does not support this client)
  * check-new-release-gtk, UpdateManager/Core/MetaRelease.py: 
    - improve debugging
  * UpdateManager/Core/utils.py:
    - add META_RELEASE_FAKE_CODENAME environment that can be used to
      test/force release upgrades
  * check-new-release-gtk:
    - append language parameter to uri
    - support --debug

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 29 Mar 2010 12:06:41 +0200

update-manager (1:0.133.7) lucid; urgency=low

  [ Nathan Stratton Treadway ]
  * data/release-upgrades
    - Provide better explanation of what how the various options in the
      configuration file control which upgrades are presented to the user.
      (LP: #522910)

  [ Barry Warsaw ]
  * README