@@ -6,6 +6,8 @@ update-manager (1:0.133.8ubuntu1) lucid; urgency=low
   [ Michael Vogt ]
   * refresh translations from launchpad
   * update "10.04" strings to "10.04 LTS" and unfuzzy translations
+  * when requesting the release announcement, append ?lang=current_lang
+    to the request URI
 
  -- Barry Warsaw <barry@canonical.com>  Fri, 02 Apr 2010 12:45:11 -0400
 
